tests/error/invalid_pointer_cast.gw
#! [contains] invalid pointer cast
<<< 1 $ Ptr<~Object] >>>;
